read me updated and documentation added

--- a/src/ChatApp/ChatApp.csproj
+++ b/src/ChatApp/ChatApp.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\containers\" />
+    <Folder Include="wwwroot\documentation\" />
   </ItemGroup>
 
   <ItemGroup>
