--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -3,5 +3,13 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "AzureStorageActiveUserRepositoryOptions": {
+    "ConnectionString": "UseDevelopmentStorage=true",
+    "TableName": "ActiveUsers"
+  },
+  "AzureStorageChatMessageRepositoryOptions": {
+    "ConnectionString": "UseDevelopmentStorage=true",
+    "TableName": "ChatMessages"
   }
 }
